<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello Worl!</string>
    <string name="app_name">Geounlock L</string>
    <string name="dash_name">Geounlock Dash</string>
    <string name="unloack">Unlock</string>
    <string name="challenge">Did you get this app from Bowie State University?</string>
    
    <string name="affirm">Yes</string>
    <string name="deny">No</string>
    <color name="mycolor1">#000000</color>
    <string name="action_settings">Settings</string>
    <string name="all_locations">All Locations (Marks)</string>
    <string name="location_list">All Locations (List)</string>
    <string name="start_service">Start Tracking</string>
    <string name="end_service">End Tracking</string>
    <string name="bNormal">Normal</string>
    <string name="bTerrain">Terrain</string>
    <string name="bSatellite">Satellite</string>
    <string name="location">Getting Location…\n</string>
    <string name="dashboard">Launch Dashboard</string>


</resources>